# vss-substore

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: app.rs  cache.rs  config.rs  main.rs  security.rs  subscriptions.rs
docs/: misans-font.md
docs/rewrite/: stage-10-ssrf-and-trust-boundary.md  stage-11-edge-hardening.md  stage-4-delivery.md  stage-5-cutover.md  stage-6-persistent-sessions.md  stage-7-security-and-observability.md  stage-8-persistent-merge-cache.md  stage-9-cache-consistency.md
frontend/assets/: app.css
frontend/assets/styles/: base.css  forms.css  layout.css  panels.css  responsive.css  shell.css  tokens.css
frontend/src/: api.rs  app.rs  main.rs  messages.rs
frontend/src/components/: shell.rs
frontend/src/components/console/: actions.rs  auth.rs  cache.rs  diagnostics.rs  editor.rs  mod.rs  overview.rs  services.rs  state.rs  users.rs  view.rs
scripts/: build-misans-subset.sh
src/: config.rs  error.rs  log.rs  main.rs  state.rs  utils.rs
src/handlers/: auth.rs  mod.rs  subscription.rs  user.rs
web/: index.html  script.js  style.css
