[package]
name = "vss-substore"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower-sessions = "0.15"

# Session 配置
rand = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }

# SQLite 数据库
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "json"] }

# HTTP 客户端
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "gzip", "brotli", "deflate", "stream"] }

# HTML 解析
scraper = "0.25"
# ego-tree 由 scraper 间接引入，不需要显式声明
url = "2.5"

# 异步运行时
futures = "0.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2"

# 工具
uuid = { version = "1.21", features = ["v4", "serde"] }
derive_more = { version = "2.1", features = ["display", "from"] }
async-trait = "0.1"

# 密码哈希
argon2 = { version = "0.5", features = ["std"] }
