[package]
name = "submora"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time = "0.3"
tokio.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
argon2 = { version = "0.5", features = ["std"] }
scraper = "0.25"
uuid = { version = "1.18", features = ["v4"] }
submora-core = { path = "../packages/core" }
submora-shared = { path = "../packages/shared" }
